feat:PCF8563 EXTI CLKOUT, ValveFeedback class

--- a/F103_DongTamV3/F103_DongTamV3.ioc
+++ b/F103_DongTamV3/F103_DongTamV3.ioc
@@ -25,25 +25,26 @@ Mcu.IPNb=8
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
-Mcu.Pin1=PA5
-Mcu.Pin10=PA13
-Mcu.Pin11=PA14
-Mcu.Pin12=PB3
-Mcu.Pin13=PB4
-Mcu.Pin14=PB5
-Mcu.Pin15=PB8
-Mcu.Pin16=PB9
-Mcu.Pin17=VP_SYS_VS_Systick
-Mcu.Pin18=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin2=PA6
-Mcu.Pin3=PA7
-Mcu.Pin4=PB1
-Mcu.Pin5=PB10
-Mcu.Pin6=PB11
-Mcu.Pin7=PA8
-Mcu.Pin8=PA9
-Mcu.Pin9=PA10
-Mcu.PinsNb=19
+Mcu.Pin1=PC14-OSC32_IN
+Mcu.Pin10=PA10
+Mcu.Pin11=PA13
+Mcu.Pin12=PA14
+Mcu.Pin13=PB3
+Mcu.Pin14=PB4
+Mcu.Pin15=PB5
+Mcu.Pin16=PB8
+Mcu.Pin17=PB9
+Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin19=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin2=PA5
+Mcu.Pin3=PA6
+Mcu.Pin4=PA7
+Mcu.Pin5=PB1
+Mcu.Pin6=PB10
+Mcu.Pin7=PB11
+Mcu.Pin8=PA8
+Mcu.Pin9=PA9
+Mcu.PinsNb=20
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -115,6 +116,10 @@ PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
 PC13-TAMPER-RTC.GPIO_Label=BlueLED
 PC13-TAMPER-RTC.Locked=true
 PC13-TAMPER-RTC.Signal=GPIO_Output
+PC14-OSC32_IN.GPIOParameters=GPIO_ModeDefaultEXTI
+PC14-OSC32_IN.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PC14-OSC32_IN.Locked=true
+PC14-OSC32_IN.Signal=GPXTI14
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -156,6 +161,8 @@ RCC.PLLMCOFreq_Value=4000000
 RCC.TimSysFreq_Value=8000000
 SH.ADCx_IN9.0=ADC1_IN9,IN9
 SH.ADCx_IN9.ConfNb=1
+SH.GPXTI14.0=GPIO_EXTI14
+SH.GPXTI14.ConfNb=1
 TIM3.IPParameters=Prescaler,Period
 TIM3.Period=10000-1
 TIM3.Prescaler=8-1
