--- a/F103_DongTamV3/F103_DongTamV3.ioc
+++ b/F103_DongTamV3/F103_DongTamV3.ioc
@@ -26,12 +26,12 @@ Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA10
-Mcu.Pin11=PA13
-Mcu.Pin12=PA14
-Mcu.Pin13=PB3
-Mcu.Pin14=PB4
-Mcu.Pin15=PB5
+Mcu.Pin10=PA14
+Mcu.Pin11=PB3
+Mcu.Pin12=PB4
+Mcu.Pin13=PB5
+Mcu.Pin14=PB6
+Mcu.Pin15=PB7
 Mcu.Pin16=PB8
 Mcu.Pin17=PB9
 Mcu.Pin18=VP_SYS_VS_Systick
@@ -43,7 +43,7 @@ Mcu.Pin5=PB1
 Mcu.Pin6=PB10
 Mcu.Pin7=PB11
 Mcu.Pin8=PA8
-Mcu.Pin9=PA9
+Mcu.Pin9=PA13
 Mcu.PinsNb=20
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -65,8 +65,6 @@ NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA10.Mode=Asynchronous
-PA10.Signal=USART1_RX
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
@@ -87,8 +85,6 @@ PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=OE
 PA8.Locked=true
 PA8.Signal=GPIO_Output
-PA9.Mode=Asynchronous
-PA9.Signal=USART1_TX
 PB1.Locked=true
 PB1.Signal=ADCx_IN9
 PB10.Mode=Asynchronous
@@ -107,6 +103,12 @@ PB5.GPIOParameters=GPIO_Label
 PB5.GPIO_Label=_74HC165_LOAD
 PB5.Locked=true
 PB5.Signal=GPIO_Output
+PB6.Locked=true
+PB6.Mode=Asynchronous
+PB6.Signal=USART1_TX
+PB7.Locked=true
+PB7.Mode=Asynchronous
+PB7.Signal=USART1_RX
 PB8.Locked=true
 PB8.Mode=I2C
 PB8.Signal=I2C1_SCL
