--- a/F103_DongTamV3/F103_DongTamV3.ioc
+++ b/F103_DongTamV3/F103_DongTamV3.ioc
@@ -10,41 +10,43 @@ CAD.pinconfig=
 CAD.provider=
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+IWDG.IPParameters=Reload,Prescaler
+IWDG.Prescaler=IWDG_PRESCALER_16
+IWDG.Reload=2500-1
 KeepUserPlacement=false
 Mcu.CPN=STM32F103C8T6
 Mcu.Family=STM32F1
 Mcu.IP0=ADC1
 Mcu.IP1=I2C1
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=TIM3
-Mcu.IP6=USART1
-Mcu.IP7=USART3
+Mcu.IP2=IWDG
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IP6=TIM3
+Mcu.IP7=USART1
 Mcu.IPNb=8
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA14
-Mcu.Pin11=PB3
-Mcu.Pin12=PB4
-Mcu.Pin13=PB5
-Mcu.Pin14=PB6
-Mcu.Pin15=PB7
-Mcu.Pin16=PB8
-Mcu.Pin17=PB9
-Mcu.Pin18=VP_SYS_VS_Systick
-Mcu.Pin19=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin10=PB4
+Mcu.Pin11=PB5
+Mcu.Pin12=PB6
+Mcu.Pin13=PB7
+Mcu.Pin14=PB8
+Mcu.Pin15=PB9
+Mcu.Pin16=VP_IWDG_VS_IWDG
+Mcu.Pin17=VP_SYS_VS_Systick
+Mcu.Pin18=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin2=PA5
 Mcu.Pin3=PA6
 Mcu.Pin4=PA7
 Mcu.Pin5=PB1
-Mcu.Pin6=PB10
-Mcu.Pin7=PB11
-Mcu.Pin8=PA8
-Mcu.Pin9=PA13
-Mcu.PinsNb=20
+Mcu.Pin6=PA8
+Mcu.Pin7=PA13
+Mcu.Pin8=PA14
+Mcu.Pin9=PB3
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -63,7 +65,6 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.USART3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
@@ -87,10 +88,6 @@ PA8.Locked=true
 PA8.Signal=GPIO_Output
 PB1.Locked=true
 PB1.Signal=ADCx_IN9
-PB10.Mode=Asynchronous
-PB10.Signal=USART3_TX
-PB11.Mode=Asynchronous
-PB11.Signal=USART3_RX
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=_74HC165_DATA
 PB3.Locked=true
@@ -154,7 +151,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM3_Init-TIM3-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM3_Init-TIM3-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true
 RCC.APB1Freq_Value=8000000
 RCC.APB2Freq_Value=8000000
 RCC.FamilyName=M
@@ -171,8 +168,8 @@ TIM3.Period=10000-1
 TIM3.Prescaler=8-1
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
-USART3.IPParameters=VirtualMode
-USART3.VirtualMode=VM_ASYNC
+VP_IWDG_VS_IWDG.Mode=IWDG_Activate
+VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
